# rezalnyash-core

./: .gitignore  Cargo.toml  Makefile  README.md  example_request.json  minimal_request.json  simple_request.json
docs/: error_handling.md
examples/: basic_usage copy.rs  basic_usage.rs  debug_example.rs  example.rs  integration_example.rs  rest_api_usage.rs
src/: algorithms.rs  constants.rs  errors.rs  html_visualizer.rs  lib.rs  optimizer.rs  parallel.rs  types.rs
src/enums/: cut_direction.rs  cut_orientation_preference.rs  mod.rs  optimization_level.rs  optimization_priority.rs  orientation.rs  status.rs  status_code.rs  status_tests.rs  stock_solution_result.rs
src/errors/: app_error.rs  client_info_errors.rs  computation.rs  computation_errors.rs  core.rs  core_errors.rs  mod.rs  service.rs  service_errors.rs  stock.rs  stock_errors.rs  task.rs  task_errors.rs
src/features/: cut.rs  cutting_optimizer.rs  html_generator.rs  mod.rs  node.rs  permutation_generator.rs  placed_panel.rs  placement.rs  rectangle.rs  solution.rs
src/features/engine/: comparator.rs  cut_list_thread.rs  cutlist_optimizer_service_impl.rs  mod.rs  task_report.rs
src/features/input/: mod.rs
src/features/panel_grouper/: mod.rs  panel_grouper.rs
src/features/permutation_generator/: mod.rs  permutation_generator.rs
src/logging/: init.rs  macros.rs
src/models/: mod.rs
src/models/arrangement/: arrangement.rs  arrangement_test.rs  mod.rs
src/models/calculation_request/: calculation_request.rs  calculation_request_tests.rs  impls.rs  mod.rs  structs.rs
src/models/calculation_response/: calculation_response.rs  calculation_response_tests.rs  mod.rs  (+2 more)
src/save_to_json/: mod.rs
src/scaled_math/: converter.rs  errors.rs  mod.rs  precision_analyzer.rs  scaled_number.rs  tests.rs
src/services/: arrangement.rs  cut_list_optimizer_service.rs  cut_list_optimizer_service_impl.rs  cut_list_optimizer_service_impl_test.rs  mod.rs
src/utils/: json.rs
(+206 files in other folders)
