[package]
name = "rezalnyas_core"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "Core library"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/rezalnyas_core"


[lib]
name = "rezalnyas_core"
crate-type = ["cdylib", "rlib"]


[dependencies]

serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
rayon = "1.8"
crossbeam = "0.8"

[dev-dependencies]
criterion = "0.5"
tokio = { version = "1.0", features = ["full"] }