[package]
name = "rezalnyas_core"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "Core library"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/rezalnyas_core"


[lib]
name = "rezalnyas_core"
crate-type = ["cdylib", "rlib"]


[dependencies]
num_cpus = "1.17.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
rayon = "1.10.0"
crossbeam = "0.8.4"
tokio = { version = "1.46.0", features = ["full"] }
async-trait = "0.1.88"
chrono = { version = "0.4.41", features = ["serde"] }

[dev-dependencies]
criterion = "0.6.0"
tokio = { version = "1.46.0", features = ["full"] }
