[package]
name = "rezalnyas_core"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "Core library"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/rezalnyas_core"


[lib]
name = "rezalnyas_core"
crate-type = ["cdylib", "rlib"]


[dependencies]

uuid = { version = "1.17.0", features = ["v4", "serde"] }
num_cpus = "1.17.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
chrono = { version = "0.4.41", features = ["serde"] }

[dev-dependencies]
criterion = "0.6.0"
tokio = { version = "1.46.0", features = ["full"] }
